[project]
name = "district-pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
